desktop/iptables.rules
#Created by Sam Gleske
#Sat Jul  9 12:17:02 PDT 2016
#My personal linux gaming desktop firewall
#Ubuntu 16.04 LTS
#Linux 4.4.0-28-generic x86_64
#iptables v1.6.0

#Latest environment
#Ubuntu 18.04.3 LTS
#Linux 5.3.0-23-generic x86_64
#iptables v1.6.1

*nat
:PREROUTING ACCEPT [3:296]
:INPUT ACCEPT [2:227]
:OUTPUT ACCEPT [44:3277]
:POSTROUTING ACCEPT [44:3277]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A POSTROUTING -s 172.19.0.0/16 ! -o br-250452b8b47f -j MASQUERADE
-A POSTROUTING -s 172.18.0.0/16 ! -o br-0cdebc300597 -j MASQUERADE
-A DOCKER -i docker0 -j RETURN
-A DOCKER -i br-250452b8b47f -j RETURN
-A DOCKER -i br-0cdebc300597 -j RETURN
COMMIT

*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:OUTPUT_deny - [0:0]
:OUTPUT_allow - [0:0]
:DOCKER - [0:0]
:DOCKER-ISOLATION-STAGE-1 - [0:0]
:DOCKER-ISOLATION-STAGE-2 - [0:0]
:DOCKER-USER - [0:0]
:DISCORD_NETWORKS - [0:0]
:DISCORD_NETWORKS_allow - [0:0]
:GOOGLE_NETWORKS - [0:0]
:GOOGLE_NETWORKS_allow - [0:0]
:VALVE_NETWORKS - [0:0]
:VALVE_NETWORKS_allow - [0:0]
:BLIZZARD_NETWORKS - [0:0]
:BLIZZARD_NETWORKS_allow - [0:0]
:TWITCH_NETWORKS - [0:0]
:TWITCH_NETWORKS_allow - [0:0]
:IRC_NETWORKS - [0:0]
:IRC_NETWORKS_allow - [0:0]
:US_NETWORKS - [0:0]
:US_NETWORKS_allow - [0:0]
:INTERNAL - [0:0]
:INTERNAL_allow - [0:0]
:PUBLIC_deny - [0:0]
:PUBLIC_allow - [0:0]
:WORLD_allow - [0:0]
:LOGGING - [0:0]

#INPUT Chain
-A INPUT -j PUBLIC_deny
-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
-A INPUT -i lo -j ACCEPT
#docker
-A INPUT -s 172.17.0.0/16 -j ACCEPT
-A INPUT -j INTERNAL
-A INPUT -j WORLD_allow
-A INPUT -j US_NETWORKS
-A INPUT -j PUBLIC_allow
-A INPUT -j LOGGING
-A INPUT -j REJECT --reject-with icmp-host-prohibited

#OUTPUT Chain
-A OUTPUT -j OUTPUT_deny
-A OUTPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -j OUTPUT_allow
-A OUTPUT -j DISCORD_NETWORKS
-A OUTPUT -j GOOGLE_NETWORKS
-A OUTPUT -j VALVE_NETWORKS
-A OUTPUT -j IRC_NETWORKS
-A OUTPUT -j BLIZZARD_NETWORKS
-A OUTPUT -j LOGGING
-A OUTPUT -j REJECT --reject-with icmp-host-prohibited

#FORWARD Chain
-A FORWARD -m state --state ESTABLISHED,RELATED -j ACCEPT
#docker
-A FORWARD -j DOCKER-USER
-A FORWARD -j DOCKER-ISOLATION-STAGE-1
-A FORWARD -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o docker0 -j DOCKER
-A FORWARD -i docker0 ! -o docker0 -j ACCEPT
-A FORWARD -i docker0 -o docker0 -j ACCEPT
-A FORWARD -o br-250452b8b47f -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o br-250452b8b47f -j DOCKER
-A FORWARD -i br-250452b8b47f ! -o br-250452b8b47f -j ACCEPT
-A FORWARD -i br-250452b8b47f -o br-250452b8b47f -j ACCEPT
-A FORWARD -o br-0cdebc300597 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o br-0cdebc300597 -j DOCKER
-A FORWARD -i br-0cdebc300597 ! -o br-0cdebc300597 -j ACCEPT
-A FORWARD -i br-0cdebc300597 -o br-0cdebc300597 -j ACCEPT
#end docker
-A FORWARD -j LOGGING
-A FORWARD -j REJECT --reject-with icmp-host-prohibited

#LOGGING Chain
#-A LOGGING -m limit --limit 2/min -j LOG --log-prefix "iptables DROP: " --log-level 4
#-A LOGGING -j LOG --log-prefix "iptables DROP: " --log-level 4
-A LOGGING -s 172.0.0.0/8 -d 172.0.0.0/8 -j RETURN
-A LOGGING -m limit --limit 1/second -j LOG --log-prefix "iptables DROP: " --log-level 4

#docker related chains
-A DOCKER-ISOLATION-STAGE-1 -i docker0 ! -o docker0 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -i br-250452b8b47f ! -o br-250452b8b47f -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -i br-0cdebc300597 ! -o br-0cdebc300597 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -j RETURN
-A DOCKER-ISOLATION-STAGE-2 -o docker0 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -o br-250452b8b47f -j DROP
-A DOCKER-ISOLATION-STAGE-2 -o br-0cdebc300597 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -j RETURN
-A DOCKER-USER -j RETURN

#  Self-hosted Rust server
#-A WORLD_allow -p udp -m udp --dport 28015 -j ACCEPT
#-A WORLD_allow -p tcp -m tcp --dport 8000 -j ACCEPT

########################################################################
# GLESKE INTERNAL NETWORKS

-A INTERNAL -s 192.168.1.0/24 -g INTERNAL_allow

#VPN
#-A INTERNAL -s 10.9.8.0/24 -g INTERNAL_allow

#icmp
#-A INTERNAL_allow -p icmp -j ACCEPT
#synergy
-A INTERNAL_allow -p tcp -m state --state NEW -m tcp --dport 24800 -j ACCEPT
#ssh
#-A INTERNAL_allow -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT
#Herd deployments via bittorrent
#-A INTERNAL_allow -p tcp -m state --state NEW -m multiport --dport 10000:11000 -j ACCEPT
#accept traceroutes
#-A INTERNAL_allow -p udp -m state --state NEW -m udp --dport 33434:33523 -j ACCEPT
#Starbound
#-A INTERNAL_allow -p tcp -m state --state NEW -m tcp --dport 21025 -j ACCEPT
#Windward game
#-A INTERNAL_allow -p tcp -m state --state NEW -m tcp --dport 5127 -j ACCEPT
#python -m SimpleHTTPServer
#-A INTERNAL_allow -p tcp -m state --state NEW -m tcp --dport 8000 -j ACCEPT
#magicite
#-A INTERNAL_allow -p tcp -m state --state NEW -m tcp --dport 7777 -j ACCEPT
#-A INTERNAL_allow -p udp -m state --state NEW -m udp --dport 7777 -j ACCEPT

# END GLESKE INTERNAL NETWORKS
########################################################################


########################################################################
# PUBLIC INTERNET RULES

#DENY CONNECTIONS

# Dropping these because... they were attempting sketchy attack probing
-A PUBLIC_deny -s 37.1.0.0/16 -j DROP
-A PUBLIC_deny -s 196.245.0.0/16 -j DROP
-A PUBLIC_deny -s 192.241.0.0/16 -j DROP
-A PUBLIC_deny -s 180.149.0.0/16 -j DROP
-A PUBLIC_deny -s 2.57.0.0/16 -j DROP

#MALWARE
-A PUBLIC_deny -s 192.168.10.1 -p tcp -m state --state NEW -m tcp --dport 22 -j DROP
-A PUBLIC_deny -s 224.0.0.251 -j DROP
-A PUBLIC_deny -d 224.0.0.251 -j DROP
-A PUBLIC_deny -d 192.168.10.255 -j DROP
-A PUBLIC_deny -p udp --sport 17500 --dport 17500 -j DROP
#drop local broadcast
-A PUBLIC_deny -d 255.255.255.255 -j DROP

#ALLOW CONNECTIONS

#ssh from everyone in the United States
#-A PUBLIC_allow -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT

#Terraria
#-A PUBLIC_allow -p tcp -m state --state NEW -m tcp --dport 7777 -j ACCEPT
#Starbound
#-A PUBLIC_allow -p tcp -m state --state NEW -m tcp --dport 21025 -j ACCEPT
#-A PUBLIC_allow -p udp -m state --state NEW -m udp --dport 21025 -j ACCEPT


# END PUBLIC INTERNET RULES
########################################################################


########################################################################
# OUTBOUND RULES

#OUTBOUND block

#MALWARE
-A OUTPUT_deny -d 212.7.208.65 -j DROP
-A OUTPUT_deny -d 224.0.0.251 -j DROP

#OUTBOUND allow

#allow all internal network outbound communications
-A OUTPUT_allow -d 192.168.1.0/24 -j ACCEPT
#allow broadcase
-A OUTPUT_allow -d 255.255.255.255 -j ACCEPT
#linksys
-A OUTPUT_allow -d 192.168.1.1 -j ACCEPT
-A OUTPUT_allow -d 10.9.8.0/24 -j ACCEPT
# docker using RFC1918 space
-A OUTPUT_allow -d 172.16.0.0/12 -j ACCEPT
-A OUTPUT_allow -d 172.17.0.0/16 -j ACCEPT
-A OUTPUT_allow -d 172.18.0.0/16 -j ACCEPT
-A OUTPUT_allow -d 172.19.0.0/16 -j ACCEPT

# Voice chat
#-A OUTPUT_allow -p udp -j ACCEPT
#-A OUTPUT_allow -p tcp -j ACCEPT

#Allow Google network for XMPP chatting
-A OUTPUT_allow -d 173.194.0.0/16 -p tcp -m tcp --dport 5222 -j ACCEPT

#-A OUTPUT_allow -d 192.168.100.1 -j ACCEPT
#allow ping only to public servers
-A OUTPUT_allow -p icmp -m state --state NEW -m icmp --icmp-type 8 -j ACCEPT
#Google Public DNS
-A OUTPUT_allow -p udp -d 8.8.8.8 -m state --state NEW -m udp --dport 53 -j ACCEPT
-A OUTPUT_allow -p tcp -d 8.8.8.8 -m state --state NEW -m tcp --dport 53 -j ACCEPT
-A OUTPUT_allow -p udp -d 8.8.4.4 -m state --state NEW -m udp --dport 53 -j ACCEPT
-A OUTPUT_allow -p tcp -d 8.8.4.4 -m state --state NEW -m tcp --dport 53 -j ACCEPT
#Allow NTP
-A OUTPUT_allow -p tcp -m state --state NEW -m tcp --dport 123 -j ACCEPT
-A OUTPUT_allow -p udp -m state --state NEW -m udp --dport 123 -j ACCEPT
#smtps outbound
-A OUTPUT_allow -p tcp -m state --state NEW -m tcp --dport 587 -j ACCEPT
#system updates and web traffic
-A OUTPUT_allow -p tcp -m state --state NEW -m multiport --dport 21,80,443 -j ACCEPT
#accept traceroutes
-A OUTPUT_allow -p udp -m state --state NEW -m udp --dport 33434:33523 -j ACCEPT
#irc networks (TLS only)
#-A OUTPUT_allow -p tcp -m state --state NEW -m tcp --dport 6697 -j ACCEPT
#allow outbound ssh
-A OUTPUT_allow -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT
#allow outbound DNS
-A OUTPUT_allow -p tcp -m state --state NEW -m tcp --dport 53 -j ACCEPT
-A OUTPUT_allow -p udp -m state --state NEW -m udp --dport 53 -j ACCEPT

#Terraria
#-A OUTPUT_allow -d 23.243.71.225 -p tcp -m state --state NEW -m tcp --dport 7777 -j ACCEPT
#-A OUTPUT_allow -d 23.243.71.225 -p tcp -m state --state NEW -m tcp --dport 24 -j ACCEPT

#Rust game
-A OUTPUT_allow -p tcp -m state --state NEW -m tcp --dport 28016 -j ACCEPT
-A OUTPUT_allow -p udp -m multiport --dports 17500,28015,28016,28026,28215,28231,28315 -j ACCEPT
#play.deadlock.com:1333 rust server
-A OUTPUT_allow -d 86.18.105.216 -p udp -m udp --dport 1333 -j ACCEPT

#twitch streaming
-A OUTPUT_allow -p tcp -m state --state NEW -m tcp --dport 1935 -j ACCEPT

# GPG hkp keyserver protocol
-A OUTPUT_allow -p tcp -m state --state NEW -m tcp --dport 11371 -j ACCEPT
-A OUTPUT_allow -p udp -m udp --dport 11371 -j ACCEPT

# starbound
#-A OUTPUT_allow -p tcp -m state --state NEW -m tcp --dport 21025 -j ACCEPT

# END OUTBOUND RULES
########################################################################
#
########################################################################
# TWITCH NETWORKS RULES
# For streaming games

# networks
# https://search.arin.net/rdap/?query=JUSTI-19&searchFilter=entity
-A TWITCH_NETWORKS -d 192.108.239.0/24 -g TWITCH_NETWORKS_allow
-A TWITCH_NETWORKS -d 192.16.64.0/21 -g TWITCH_NETWORKS_allow
-A TWITCH_NETWORKS -d 199.9.248.0/21 -g TWITCH_NETWORKS_allow
-A TWITCH_NETWORKS -d 23.160.0.0/24 -g TWITCH_NETWORKS_allow
-A TWITCH_NETWORKS -d 52.223.216.0/21 -g TWITCH_NETWORKS_allow
-A TWITCH_NETWORKS -d 52.223.224.0/20 -g TWITCH_NETWORKS_allow
-A TWITCH_NETWORKS -d 52.223.240.0/20 -g TWITCH_NETWORKS_allow
-A TWITCH_NETWORKS -d 99.181.64.0/18 -g TWITCH_NETWORKS_allow
-A TWITCH_NETWORKS -d 99.181.88.0/21 -g TWITCH_NETWORKS_allow
-A TWITCH_NETWORKS -d 99.181.96.0/19 -g TWITCH_NETWORKS_allow

# allowed ports
-A TWITCH_NETWORKS_allow -p tcp -m multiport --dport 1935 -j ACCEPT

# END TWITCH NETWORKS RULES
########################################################################

########################################################################
# BLIZZARD NETWORKS RULES
# For Battle.net games

# This is to limit TCP and UDP client communications only to Blizzard
# networks.

# Resources:
#   * List of Blizzard Entertainment, Inc. networks http://ipinfo.io/AS57976
#   * Battle.net client ports https://us.battle.net/support/en/article/300479

#Misc rules discovered via firewall monitoring
-A OUTPUT_allow -d 12.129.0.0/16 -p tcp -m multiport --dports 1119,3724 -j ACCEPT
#-A OUTPUT_allow -d 24.105.0.0/16 -p tcp -m tcp --dport 1119 -j ACCEPT
-A OUTPUT_allow -d 69.164.0.0/16 -p tcp -m multiport --dports 1119 -j ACCEPT

#local LAN broadcasts
-A OUTPUT_allow -p udp -d 255.255.255.255 -m state --state NEW -m udp --dport 6120 -j ACCEPT


#United States IP Blocks for Blizzard Entertainment, Inc.
-A BLIZZARD_NETWORKS -d 24.105.0.0/21 -g BLIZZARD_NETWORKS_allow
-A BLIZZARD_NETWORKS -d 24.105.8.0/21 -g BLIZZARD_NETWORKS_allow
-A BLIZZARD_NETWORKS -d 24.105.16.0/22 -g BLIZZARD_NETWORKS_allow
-A BLIZZARD_NETWORKS -d 24.105.20.0/22 -g BLIZZARD_NETWORKS_allow
-A BLIZZARD_NETWORKS -d 24.105.25.0/24 -g BLIZZARD_NETWORKS_allow
-A BLIZZARD_NETWORKS -d 24.105.26.0/23 -g BLIZZARD_NETWORKS_allow
-A BLIZZARD_NETWORKS -d 24.105.28.0/24 -g BLIZZARD_NETWORKS_allow
-A BLIZZARD_NETWORKS -d 24.105.29.0/24 -g BLIZZARD_NETWORKS_allow
-A BLIZZARD_NETWORKS -d 24.105.32.0/21 -g BLIZZARD_NETWORKS_allow
-A BLIZZARD_NETWORKS -d 24.105.40.0/21 -g BLIZZARD_NETWORKS_allow
-A BLIZZARD_NETWORKS -d 24.105.52.0/22 -g BLIZZARD_NETWORKS_allow
-A BLIZZARD_NETWORKS -d 24.105.57.0/24 -g BLIZZARD_NETWORKS_allow
-A BLIZZARD_NETWORKS -d 24.105.60.0/24 -g BLIZZARD_NETWORKS_allow
-A BLIZZARD_NETWORKS -d 24.105.61.0/24 -g BLIZZARD_NETWORKS_allow

#allowed blizzard ports
#battle.net client
-A BLIZZARD_NETWORKS_allow -p tcp -m multiport --dport 1119,1120,3724,4000,6112,6113,6114 -j ACCEPT
-A BLIZZARD_NETWORKS_allow -p udp -m multiport --dport 1119,1120,3724,4000,6112,6113,6114 -j ACCEPT
#diablo 3
-A BLIZZARD_NETWORKS_allow -p tcp -m multiport --dport 80 -j ACCEPT
-A BLIZZARD_NETWORKS_allow -p udp -m multiport --dport 6120 -j ACCEPT



# END BLIZZARD NETWORKS RULES
########################################################################

########################################################################
# DISCORD NETWORKS RULES
# For Voice chat
# https://www.reddit.com/r/discordapp/comments/d3bpzk/list_of_discord_ipranges_for_their_voice_service/
# https://raw.githubusercontent.com/FQrabbit/SSTap-Rule/master/rules/Discord-All.rules

-A DISCORD_NETWORKS -d 138.128.141.39 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 1.0.0.1/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 5.200.14.128/25 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 23.105.224.0/19 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 23.229.0.0/19 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 23.229.112.0/20 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 23.236.154.210/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 23.250.0.0/18 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 23.250.112.0/20 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 31.13.64.0/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 31.13.69.33/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 31.13.69.160/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 31.13.74.17/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 31.13.82.1/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 35.213.0.0/17 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 35.214.131.0/24 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 35.214.192.0/24 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 35.215.130.119/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 35.215.135.22/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 35.215.135.43/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 35.215.135.166/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 35.215.166.242/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 35.215.170.6/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 35.215.188.122/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 35.215.177.76/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 35.215.191.255/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 38.39.192.0/24 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 43.251.180.0/24 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 43.239.136.0/22 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 43.251.181.0/24 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 43.251.183.0/24 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 45.32.0.0/21 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 45.40.58.0/24 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 45.63.64.0/20 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 64.237.45.106/31 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 67.228.235.91/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 69.171.224.0/20 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 69.171.230.18/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 75.126.0.0/20 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 83.142.224.0/21 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 88.150.153.0/27 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 88.202.176.0/20 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 88.202.186.192/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 88.212.240.0/21 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 103.102.160.0/24 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 103.102.160.2/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 103.102.160.10/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 103.102.160.18/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 103.102.160.26/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 103.102.160.34/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 103.102.160.42/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 103.102.160.50/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 103.102.160.58/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 103.102.160.66/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 103.102.160.74/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 103.102.160.178/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 103.102.160.226/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 103.102.160.234/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 103.102.161.2/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 103.102.161.18/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 103.126.137.0/24 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 103.126.138.0/24 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 103.194.164.0/22 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 103.194.166.132/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 103.194.166.133/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 103.194.166.134/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 103.194.166.135/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 103.194.166.136/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 103.194.166.137/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 103.194.166.138/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 103.194.166.139/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 103.194.166.140/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 103.194.166.141/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 104.16.9.231/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 104.16.10.231/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 104.16.11.231/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 104.16.12.231/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 104.16.13.231/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 104.16.58.5/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 104.16.59.5/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 104.16.59.37/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 104.16.60.37/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 104.16.247.144/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 104.16.248.144/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 104.16.249.144/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 104.16.250.144/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 104.16.251.144/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 104.20.160.0/24 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 104.149.0.0/16 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 104.153.84.0/22 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 104.153.87.128/25 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 104.200.135.130/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 104.200.135.154/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 104.200.135.162/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 104.200.145.128/25 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 104.200.152.0/25 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 104.207.136.226/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 104.207.136.227/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 104.207.136.228/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 104.216.4.206/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 104.216.14.162/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 104.216.33.210/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 104.216.108.18/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 104.216.143.0/24 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 104.216.145.66/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 104.216.145.70/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 104.216.222.50/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 104.216.222.54/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 104.216.222.66/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 104.216.222.70/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 104.216.240.126/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 104.216.240.234/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 104.216.240.238/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 107.152.98.86/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 107.152.100.2/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 107.152.100.6/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 107.152.100.10/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 107.152.100.26/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 107.152.128.66/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 107.152.130.114/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 107.152.137.226/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 107.160.0.0/16 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 107.182.226.97/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 107.182.226.148/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 107.182.226.151/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 107.182.226.179/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 107.182.231.128/25 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 108.61.16.128/25 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 108.61.73.0/27 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 108.61.145.234/31 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 108.160.160.0/20 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 108.171.241.154/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 108.171.241.158/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 108.171.243.226/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 109.200.202.0/26 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 109.200.204.0/26 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 109.200.212.0/22 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 119.81.31.24/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 119.81.66.219/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 119.81.66.231/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 119.81.124.64/26 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 119.81.135.33/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 119.81.135.50/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 119.81.221.22/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 119.81.246.57/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 119.81.249.133/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 138.128.21.106/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 138.128.118.66/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 138.128.140.0/24 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 157.240.3.0/24 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 159.122.70.0/24 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 161.202.39.0/24 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 161.202.39.205/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 161.202.39.206/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 161.202.39.221/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 161.202.39.223/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 161.202.39.231/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 161.202.39.236/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 161.202.39.237/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 161.202.39.239/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 161.202.39.244/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 161.202.39.254/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 161.202.48.0/24 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 161.202.48.195/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 161.202.48.202/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 161.202.48.204/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 161.202.48.205/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 161.202.48.206/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 161.202.48.212/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 161.202.48.215/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 161.202.48.232/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 161.202.48.233/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 161.202.48.234/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 161.202.48.238/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 161.202.48.240/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 161.202.48.244/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 161.202.48.245/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 161.202.48.252/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 161.202.48.253/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 161.202.165.68/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 161.202.165.81/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 161.202.204.0/24 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 162.159.128.0/24 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 162.159.129.0/24 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 162.159.130.0/24 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 162.159.131.0/24 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 162.159.132.0/24 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 162.159.133.0/24 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 162.159.134.0/24 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 162.159.135.0/24 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 162.159.136.0/24 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 162.159.137.0/24 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 162.159.138.0/24 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 162.159.139.0/24 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 162.244.55.45/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 162.245.204.0/22 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 162.245.206.0/24 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 162.245.207.0/24 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 168.1.23.111/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 168.1.23.115/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 168.1.24.0/24 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 168.1.40.139/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 168.1.40.142/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 168.1.47.54/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 169.50.30.0/24 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 169.50.62.104/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 169.57.142.103/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 169.57.165.0/24 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 169.57.177.0/24 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 172.21.8.190/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 172.106.11.0/24 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 172.106.16.0/24 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 172.106.17.0/24 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 172.106.73.0/24 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 172.106.129.154/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 172.106.200.0/24 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 172.107.98.114/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 172.107.98.118/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 172.107.98.126/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 172.107.128.0/17 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 172.106.148.0/22 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 172.107.196.0/24 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 172.107.198.0/24 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 172.107.201.102/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 172.107.207.62/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 172.107.207.70/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 172.107.207.74/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 172.107.207.94/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 172.107.208.0/24 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 173.193.186.0/24 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 173.199.89.0/24 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 173.199.97.0/24 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 173.244.217.0/24 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 176.227.219.0/24 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 184.170.250.0/24 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 185.50.106.0/24 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 185.50.107.0/24 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 185.80.221.87/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 185.169.196.0/24 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 185.169.197.0/24 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 185.169.199.0/24 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 185.179.201.0/24 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 185.212.200.0/24 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 185.212.201.0/24 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 185.212.202.0/24 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 185.212.203.0/24 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 188.42.174.0/24 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 188.42.188.76/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 188.42.188.108/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 188.42.188.124/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 188.42.190.0/24 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 188.42.197.36/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 188.42.197.220/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 188.42.197.228/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 188.42.198.84/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 188.42.198.92/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 188.42.198.124/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 188.42.198.220/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 188.122.64.0/19 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 188.122.82.0/24 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 199.96.62.0/23 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 192.111.134.210/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 192.111.134.211/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 192.111.134.213/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 192.111.134.214/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 192.111.140.246/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 192.111.140.250/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 192.186.131.26/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 192.186.183.34/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 192.227.156.186/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 208.101.48.171/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 209.222.11.0/24 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 209.222.29.27/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 209.222.29.35/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 209.222.29.36/32 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 213.163.64.0/19 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 213.179.192.0/19 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 213.196.52.0/24 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 213.196.55.0/24 -g DISCORD_NETWORKS_allow
-A DISCORD_NETWORKS -d 213.198.67.0/24 -g DISCORD_NETWORKS_allow
# UDP port 54619
-A DISCORD_NETWORKS_allow -p udp -m udp --dport 54619 -j ACCEPT

# END DISCORD NETWORKS RULES
########################################################################

########################################################################
# VALVE NETWORKS RULES
# For Steam PC Games

# Why? Steam requires one to open a lot of outbound and inbound ports.
# However, I only want to open those ports to trusted networks.  Namely between
# Valve and I and my local networks.  This helps prevent any rogue networks
# redirecting my Steam Client traffic, maliciously or otherwise.

# Resources:
#   * List of Valve Corporation networks http://ipinfo.io/AS32590
#   * Valve client ports https://support.steampowered.com/kb_article.php?ref=8571-GLVN-8711

#United States IP Blocks for Valve Corporation
-A VALVE_NETWORKS -d 72.165.61.0/24 -g VALVE_NETWORKS_allow
-A VALVE_NETWORKS -d 103.10.124.0/24 -g VALVE_NETWORKS_allow
-A VALVE_NETWORKS -d 103.10.125.0/24 -g VALVE_NETWORKS_allow
-A VALVE_NETWORKS -d 155.133.239.0/24 -g VALVE_NETWORKS_allow
-A VALVE_NETWORKS -d 155.133.240.0/23 -g VALVE_NETWORKS_allow
-A VALVE_NETWORKS -d 155.133.242.0/23 -g VALVE_NETWORKS_allow
-A VALVE_NETWORKS -d 155.133.244.0/24 -g VALVE_NETWORKS_allow
-A VALVE_NETWORKS -d 155.133.245.0/24 -g VALVE_NETWORKS_allow
-A VALVE_NETWORKS -d 155.133.246.0/23 -g VALVE_NETWORKS_allow
-A VALVE_NETWORKS -d 155.133.248.0/24 -g VALVE_NETWORKS_allow
-A VALVE_NETWORKS -d 155.133.249.0/24 -g VALVE_NETWORKS_allow
-A VALVE_NETWORKS -d 155.133.252.0/24 -g VALVE_NETWORKS_allow
-A VALVE_NETWORKS -d 155.133.254.0/24 -g VALVE_NETWORKS_allow
-A VALVE_NETWORKS -d 162.254.192.0/24 -g VALVE_NETWORKS_allow
-A VALVE_NETWORKS -d 162.254.193.0/24 -g VALVE_NETWORKS_allow
-A VALVE_NETWORKS -d 162.254.194.0/23 -g VALVE_NETWORKS_allow
-A VALVE_NETWORKS -d 162.254.195.0/24 -g VALVE_NETWORKS_allow
-A VALVE_NETWORKS -d 162.254.196.0/24 -g VALVE_NETWORKS_allow
-A VALVE_NETWORKS -d 162.254.197.0/24 -g VALVE_NETWORKS_allow
-A VALVE_NETWORKS -d 162.254.198.0/24 -g VALVE_NETWORKS_allow
-A VALVE_NETWORKS -d 162.254.199.0/24 -g VALVE_NETWORKS_allow
-A VALVE_NETWORKS -d 192.69.96.0/22 -g VALVE_NETWORKS_allow
-A VALVE_NETWORKS -d 205.185.194.0/24 -g VALVE_NETWORKS_allow
-A VALVE_NETWORKS -d 205.196.6.0/24 -g VALVE_NETWORKS_allow
-A VALVE_NETWORKS -d 208.64.200.0/24 -g VALVE_NETWORKS_allow
-A VALVE_NETWORKS -d 208.64.201.0/24 -g VALVE_NETWORKS_allow
-A VALVE_NETWORKS -d 208.64.202.0/24 -g VALVE_NETWORKS_allow
-A VALVE_NETWORKS -d 208.64.203.0/24 -g VALVE_NETWORKS_allow
-A VALVE_NETWORKS -d 208.78.164.0/22 -g VALVE_NETWORKS_allow
-A VALVE_NETWORKS -d 216.58.193.0/22 -g VALVE_NETWORKS_allow

#ALLOW OUTBOUND PORTS ONLY FOR VALVE CORPORATION
#Steam Client
-A VALVE_NETWORKS_allow -p tcp -m multiport --dport 27000:27050 -j ACCEPT
-A VALVE_NETWORKS_allow -p udp -m multiport --dport 27000:27050,4380 -j ACCEPT
#Steamworks P2P Networking and Steam Voice Chat
-A VALVE_NETWORKS_allow -p udp -m multiport --dport 3478,4379,4380 -j ACCEPT

#ALLOW INBOUND PORTS (INTERNAL NETWORKS ONLY)
#In-Home Streaming
-A INTERNAL_allow -p tcp -m state --state NEW -m multiport --dports 27036,27037 -j ACCEPT
-A INTERNAL_allow -p udp -m state --state NEW -m multiport --dports 27031,27036 -j ACCEPT

# END VALVE NETWORKS RULES
########################################################################

########################################################################
# IRC NETWORKS RULES

#irc.freenode.net
-A IRC_NETWORKS -d 139.162.227.51 -g IRC_NETWORKS_allow
-A IRC_NETWORKS -d 149.56.134.238 -g IRC_NETWORKS_allow
-A IRC_NETWORKS -d 185.30.166.37 -g IRC_NETWORKS_allow
-A IRC_NETWORKS -d 193.10.255.100 -g IRC_NETWORKS_allow
-A IRC_NETWORKS -d 204.225.96.251 -g IRC_NETWORKS_allow
-A IRC_NETWORKS -d 38.229.70.22 -g IRC_NETWORKS_allow
-A IRC_NETWORKS -d 64.86.243.181 -g IRC_NETWORKS_allow
-A IRC_NETWORKS -d 91.217.189.42 -g IRC_NETWORKS_allow
-A IRC_NETWORKS -d 94.125.182.252 -g IRC_NETWORKS_allow

#irc.gimp.org
-A IRC_NETWORKS -d 130.239.18.215 -g IRC_NETWORKS_allow
-A IRC_NETWORKS -d 158.69.32.35 -g IRC_NETWORKS_allow
-A IRC_NETWORKS -d 51.15.53.172 -g IRC_NETWORKS_allow
-A IRC_NETWORKS -d 83.98.201.47 -g IRC_NETWORKS_allow

-A IRC_NETWORKS_allow -p tcp -m tcp --dport 6697 -j ACCEPT

# END IRC NETWORKS RULES
########################################################################

########################################################################
# GOOGLE NETWORKS RULES
# Google Media IP Address Ranges
# https://support.google.com/a/answer/1279090

# Google hangouts network
-A GOOGLE_NETWORKS -d 74.125.250.0/24 -g GOOGLE_NETWORKS_allow

# Google hangouts outbound ports
-A GOOGLE_NETWORKS_allow -p tcp -m tcp --dport 443 -j ACCEPT
-A GOOGLE_NETWORKS_allow -p udp -m multiport --dport 19302:19309,443 -j ACCEPT

# END GOOGLE NETWORKS RULES
########################################################################

########################################################################
# US REGION NETWORKS (ARIN)
# https://en.wikipedia.org/wiki/List_of_assigned_/8_IPv4_address_blocks

-A US_NETWORKS -s 3.0.0.0/8 -g US_NETWORKS_allow
-A US_NETWORKS -s 8.0.0.0/8 -g US_NETWORKS_allow
-A US_NETWORKS -s 9.0.0.0/8 -g US_NETWORKS_allow
-A US_NETWORKS -s 13.0.0.0/8 -g US_NETWORKS_allow
-A US_NETWORKS -s 15.0.0.0/8 -g US_NETWORKS_allow
-A US_NETWORKS -s 16.0.0.0/8 -g US_NETWORKS_allow
-A US_NETWORKS -s 18.0.0.0/8 -g US_NETWORKS_allow
-A US_NETWORKS -s 20.0.0.0/8 -g US_NETWORKS_allow
-A US_NETWORKS -s 23.0.0.0/8 -g US_NETWORKS_allow
-A US_NETWORKS -s 24.0.0.0/8 -g US_NETWORKS_allow
-A US_NETWORKS -s 32.0.0.0/8 -g US_NETWORKS_allow
-A US_NETWORKS -s 34.0.0.0/8 -g US_NETWORKS_allow
-A US_NETWORKS -s 35.0.0.0/8 -g US_NETWORKS_allow
-A US_NETWORKS -s 40.0.0.0/8 -g US_NETWORKS_allow
-A US_NETWORKS -s 45.0.0.0/8 -g US_NETWORKS_allow
-A US_NETWORKS -s 47.0.0.0/8 -g US_NETWORKS_allow
-A US_NETWORKS -s 50.0.0.0/8 -g US_NETWORKS_allow
-A US_NETWORKS -s 52.0.0.0/8 -g US_NETWORKS_allow
-A US_NETWORKS -s 54.0.0.0/8 -g US_NETWORKS_allow
-A US_NETWORKS -s 63.0.0.0/8 -g US_NETWORKS_allow
-A US_NETWORKS -s 64.0.0.0/8 -g US_NETWORKS_allow
-A US_NETWORKS -s 65.0.0.0/8 -g US_NETWORKS_allow
-A US_NETWORKS -s 66.0.0.0/8 -g US_NETWORKS_allow
-A US_NETWORKS -s 67.0.0.0/8 -g US_NETWORKS_allow
-A US_NETWORKS -s 68.0.0.0/8 -g US_NETWORKS_allow
-A US_NETWORKS -s 69.0.0.0/8 -g US_NETWORKS_allow
-A US_NETWORKS -s 70.0.0.0/8 -g US_NETWORKS_allow
-A US_NETWORKS -s 71.0.0.0/8 -g US_NETWORKS_allow
-A US_NETWORKS -s 72.0.0.0/8 -g US_NETWORKS_allow
-A US_NETWORKS -s 73.0.0.0/8 -g US_NETWORKS_allow
-A US_NETWORKS -s 74.0.0.0/8 -g US_NETWORKS_allow
-A US_NETWORKS -s 75.0.0.0/8 -g US_NETWORKS_allow
-A US_NETWORKS -s 76.0.0.0/8 -g US_NETWORKS_allow
-A US_NETWORKS -s 96.0.0.0/8 -g US_NETWORKS_allow
-A US_NETWORKS -s 97.0.0.0/8 -g US_NETWORKS_allow
-A US_NETWORKS -s 98.0.0.0/8 -g US_NETWORKS_allow
-A US_NETWORKS -s 99.0.0.0/8 -g US_NETWORKS_allow
-A US_NETWORKS -s 100.0.0.0/8 -g US_NETWORKS_allow
-A US_NETWORKS -s 104.0.0.0/8 -g US_NETWORKS_allow
-A US_NETWORKS -s 107.0.0.0/8 -g US_NETWORKS_allow
-A US_NETWORKS -s 108.0.0.0/8 -g US_NETWORKS_allow
-A US_NETWORKS -s 128.0.0.0/8 -g US_NETWORKS_allow
-A US_NETWORKS -s 129.0.0.0/8 -g US_NETWORKS_allow
-A US_NETWORKS -s 130.0.0.0/8 -g US_NETWORKS_allow
-A US_NETWORKS -s 131.0.0.0/8 -g US_NETWORKS_allow
-A US_NETWORKS -s 132.0.0.0/8 -g US_NETWORKS_allow
-A US_NETWORKS -s 134.0.0.0/8 -g US_NETWORKS_allow
-A US_NETWORKS -s 135.0.0.0/8 -g US_NETWORKS_allow
-A US_NETWORKS -s 136.0.0.0/8 -g US_NETWORKS_allow
-A US_NETWORKS -s 137.0.0.0/8 -g US_NETWORKS_allow
-A US_NETWORKS -s 138.0.0.0/8 -g US_NETWORKS_allow
-A US_NETWORKS -s 139.0.0.0/8 -g US_NETWORKS_allow
-A US_NETWORKS -s 140.0.0.0/8 -g US_NETWORKS_allow
-A US_NETWORKS -s 142.0.0.0/8 -g US_NETWORKS_allow
-A US_NETWORKS -s 143.0.0.0/8 -g US_NETWORKS_allow
-A US_NETWORKS -s 144.0.0.0/8 -g US_NETWORKS_allow
-A US_NETWORKS -s 146.0.0.0/8 -g US_NETWORKS_allow
-A US_NETWORKS -s 147.0.0.0/8 -g US_NETWORKS_allow
-A US_NETWORKS -s 148.0.0.0/8 -g US_NETWORKS_allow
-A US_NETWORKS -s 149.0.0.0/8 -g US_NETWORKS_allow
-A US_NETWORKS -s 152.0.0.0/8 -g US_NETWORKS_allow
-A US_NETWORKS -s 155.0.0.0/8 -g US_NETWORKS_allow
-A US_NETWORKS -s 156.0.0.0/8 -g US_NETWORKS_allow
-A US_NETWORKS -s 157.0.0.0/8 -g US_NETWORKS_allow
-A US_NETWORKS -s 158.0.0.0/8 -g US_NETWORKS_allow
-A US_NETWORKS -s 159.0.0.0/8 -g US_NETWORKS_allow
-A US_NETWORKS -s 160.0.0.0/8 -g US_NETWORKS_allow
-A US_NETWORKS -s 161.0.0.0/8 -g US_NETWORKS_allow
-A US_NETWORKS -s 162.0.0.0/8 -g US_NETWORKS_allow
-A US_NETWORKS -s 164.0.0.0/8 -g US_NETWORKS_allow
-A US_NETWORKS -s 165.0.0.0/8 -g US_NETWORKS_allow
-A US_NETWORKS -s 166.0.0.0/8 -g US_NETWORKS_allow
-A US_NETWORKS -s 167.0.0.0/8 -g US_NETWORKS_allow
-A US_NETWORKS -s 168.0.0.0/8 -g US_NETWORKS_allow
-A US_NETWORKS -s 169.0.0.0/8 -g US_NETWORKS_allow
-A US_NETWORKS -s 170.0.0.0/8 -g US_NETWORKS_allow
-A US_NETWORKS -s 172.0.0.0/8 -g US_NETWORKS_allow
-A US_NETWORKS -s 173.0.0.0/8 -g US_NETWORKS_allow
-A US_NETWORKS -s 174.0.0.0/8 -g US_NETWORKS_allow
-A US_NETWORKS -s 184.0.0.0/8 -g US_NETWORKS_allow
-A US_NETWORKS -s 192.0.0.0/8 -g US_NETWORKS_allow
-A US_NETWORKS -s 198.0.0.0/8 -g US_NETWORKS_allow
-A US_NETWORKS -s 199.0.0.0/8 -g US_NETWORKS_allow
-A US_NETWORKS -s 204.0.0.0/8 -g US_NETWORKS_allow
-A US_NETWORKS -s 205.0.0.0/8 -g US_NETWORKS_allow
-A US_NETWORKS -s 206.0.0.0/8 -g US_NETWORKS_allow
-A US_NETWORKS -s 207.0.0.0/8 -g US_NETWORKS_allow
-A US_NETWORKS -s 208.0.0.0/8 -g US_NETWORKS_allow
-A US_NETWORKS -s 209.0.0.0/8 -g US_NETWORKS_allow
-A US_NETWORKS -s 216.0.0.0/8 -g US_NETWORKS_allow
# reject all traffic not originating from US regional networks.
-A US_NETWORKS -j DROP

# Whitelist all US networks.  This doesn't mean the firewall will ultimately
# allow it.  It just means that address will not be automatically blocked as a
# matter of regional policy.
-A US_NETWORKS_allow -j RETURN

# END US REGION NETWORKS
########################################################################

COMMIT
